# kiosk

./: CLAUDE.md  Cargo.toml  Makefile
.github/workflows/: release.yml
crates/api/: Cargo.toml
crates/api/src/: client.rs  lib.rs  response.rs  stations.rs  trips.rs  updater.rs
crates/cashcode/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: base64.rs  config.rs  error.rs  lib.rs  logger.rs
crates/database/: Cargo.toml
crates/printer/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  main.rs
crates/ui/src/components/: calendar.rs  header.rs  input.rs  keyboard.rs  menu.rs  mod.rs  modal.rs  toast.rs  updater_modal.rs
crates/ui/src/i18n/: mod.rs  russian.rs  turkmen.rs
crates/ui/src/state/: calendar.rs  mod.rs  modal.rs  passengers.rs  print_ticket.rs  seats.rs  stations.rs  trip.rs  trips.rs  update.rs
crates/ui/src/theme/: colors.rs  corners.rs
crates/ui/src/views/: history.rs  mod.rs  print_ticket.rs  refund.rs  seats.rs  trips.rs
crates/ui/src/views/home/: calendar.rs  mod.rs  panel.rs  stations.rs
crates/ui/src/views/seats/: explanation.rs  grid.rs  mod.rs  nav.rs  passengers.rs
keys/: public.key
src/: main.rs
src/app/: mod.rs  prepare.rs  routes.rs  state.rs  views.rs
src/app/components/: calendar.rs  mod.rs  toast.rs  updater_modal.rs
src/app/constants/: alphabet.rs  colors.rs  corners.rs  mod.rs
src/app/i18n/: mod.rs  russian.rs  turkmen.rs
src/app/pages/: home.rs  mod.rs  print_ticket.rs  refund.rs  seats.rs
src/errors/: mod.rs
src/logger/: mod.rs
src/updater/: mod.rs
src/utils/: mod.rs
(+39 files in other folders)
