[package]
name = "ui"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "kiosk"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
api = { path = "../api" }
chrono = "0.4.43"
log = "0.4.29"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image", "svg"] }
phf = { version = "0.11", features = ["macros"] }
